--- a/index.html
+++ b/index.html
@@ -5,33 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./app.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
+  <div class="challenge-container background-pattern">
+    <div class="order-summary">
+      <img class="hero__image" src="images/illustration-hero.svg" alt="Woman with headphones listening to music" />
+      <div class="summary">
+        <h2 class="summary__title">Order Summary</h2>
+        <p class="summary__text">
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
+        <div class="plan-info">
+          <img src="images/icon-music.svg">
+          <div class="flex-vertical-center">
+            <p class="plan-info__name flex-col">Annual Plan</p>
+            <p class="plan-info__cost flex-col">59.99/year</p>
+          </div>
+          <div class="flex-vertical-center">
+            <a href="#" class="plan-info__change">Change</a>
+          </div>
+        </div>
+        <div class="summary__controls flex-vertical-center">
+          <a href="#" class="button button--primary flex-col-2">Proceed to Payment</a>
+          <a href="#" class="button button--light flex-col-2">Cancel Order</a>
+        </div>
+      </div>
+    </div>
+  </div> 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ewan</a>.
   </div>
 </body>
 </html>
