Attempt to fix accessiblity issues

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <div class="challenge-container background-pattern">
+  <main role="main" class="challenge-container background-pattern">
     <div class="order-summary">
       <img class="hero__image" src="images/illustration-hero.svg" alt="Woman with headphones listening to music" />
       <div class="summary">
-        <h2 class="summary__title">Order Summary</h2>
+        <h1 class="summary__title">Order Summary</h1>
         <p class="summary__text">
           You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!
         </p>
         <div class="plan-info">
-          <img src="images/icon-music.svg">
+          <img src="images/icon-music.svg" alt="Music Note">
           <div class="flex-vertical-center">
             <p class="plan-info__name flex-col">Annual Plan</p>
             <p class="plan-info__cost flex-col">59.99/year</p>
@@ -40,10 +40,10 @@
         </div>
       </div>
     </div>
-  </div> 
-  <div class="attribution">
+  </main> 
+  <footer role="contentinfo" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#"></a>.
-  </div>
+  </footer>
 </body>
 </html>
