Fixed report issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <main role="main" class="challenge-container background-pattern">
+  <main class="challenge-container background-pattern">
     <div class="order-summary">
       <img class="hero__image" src="images/illustration-hero.svg" alt="Woman with headphones listening to music" />
       <div class="summary">
@@ -41,9 +41,9 @@
       </div>
     </div>
   </main> 
-  <footer role="contentinfo" class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#"></a>.
+    Coded by <a href="#">Ewan</a>.
   </footer>
 </body>
 </html>
